
Imager 0.65 - unreleased
===========

Bug fixes:

 - In some cases when an error occurs reading those parts of a JPEG
   file after the image the scan-line buffer could be freed a second
   time.  In cases where the the error occured while reading the image
   data it's possible that the buffer could have leaked.
   Thanks to Gabriel Vasseur for reporting this and help in tracking
   it down.

Imager 0.64 - 23 April 2008
===========

This is a bug fix release.  This includes a fix for a possible
security issue.

Bug fixes:

 - Possible security issue: The floating point sample path for image
   based fills had a buffer overflow.  This would overwrite the end of
   a malloc()ed buffer with double precision floats.
   http://rt.cpan.org/Ticket/Display.html?id=35324
   CVE-2008-1928

 - check that the result of fileno($fh) is defined rather than simply
   true when read() or write() is supplied with an fh parameter.
   http://rt.cpan.org/Ticket/Display.html?id=35139

 - i_scale_axis() wasn't checking the result of i_img_new_ch()
   resulting in a SIGSEGV when attempting to scale an image to a size
   too large to fit in memory.  This is a NULL pointer access issue,
   not a buffer overflow.
   Added a check for the failure.
   scale_calculate() (and hence scale()) will now fail if any of the
   scale size parameters are a reference.
   http://rt.cpan.org/Ticket/Display.html?id=35172

 - Regression: filling a greyscale image with a hatch used the wrong
   color channels from the supplied fg/bg colors.
   https://rt.cpan.org/Ticket/Display.html?id=35278

 - fixed a related problem for image fills.

Imager 0.63 - 7 April 2008
===========

This release primarily contains changes to improve ease of use -
rather than you having to convert images to the appropriate number of
channels, Imager handles it internally.  How to handle drawing colors
and the default combine mode is a thornier problem left for some other
release.
